# Adventure-2

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.ini  lines.py  main.cpp  run.bat  todo.md  todo.txt  validateData.py
data/: animals.json  biomes.json  civ-types.json  containers.json  craftableResources.json  edit.py  enemies.json  furnace.json  liquids.json  machines.json  potions.json  resources.json  skillsets.json  smoker.json  storages.json  tools.json  weapons.json
generation/: acquireRules.json  generate.ipynb
infodata/: commandUses.json  commands.txt  help.txt  object_info.json
lib/: AdventureException.hpp  Animal.cpp  Animal.hpp  CResource.cpp  CResource.hpp  Civilization.cpp  Civilization.hpp  Colors.hpp  Config.cpp  Config.hpp  Container.cpp  Container.hpp  Defaults.hpp  Enemy.cpp  Enemy.hpp  Entity.hpp  Factory.cpp  Factory.hpp  FileReader.cpp  FileReader.hpp  Formulae.cpp  Formulae.hpp  GameData.hpp  GameEngine.cpp  GameEngine.hpp  Interface.hpp  JsonHandler.cpp  JsonHandler.hpp  Launcher.cpp  Launcher.hpp  Liquid.cpp  Liquid.hpp  Machine.cpp  Machine.hpp  Map.cpp  Map.hpp  Object.hpp  Player.cpp  Player.hpp  RandomGenerator.cpp  (+20 more)
saves/: test-1.game  test-2.game  test.game
tests/: CMakeLists.txt  animalTests.cpp  civilizationTests.cpp  containerTests.cpp  cresourceTests.cpp  enemyTests.cpp  factoryTests.cpp  fileReaderTests.cpp  formulaTests.cpp  gameEngineTests.cpp  liquidTests.cpp  mapTests.cpp  objectTests.cpp  playerTests.cpp  randomGeneratorTests.cpp  resourceTests.cpp  skillSetTests.cpp  storageTests.cpp  stringHelperTests.cpp  test.cpp  toolTests.cpp  weaponTests.cpp
